# chess-ai

./: .dockerignore  .editorconfig  .eslintrc.cjs  .gcloudignore  .gitignore  .prettierignore  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  baseline_wac_depth8.json  build-vercel.sh  cloudbuild.yaml  config.json  hanging_pieces_depth6.json  optimized_params.txt  package.json  rust-toolchain.toml  test-mate-detection  test-mate-detection.rs  test-ws-client.js  test-ws-client.py  test-ws.html  test_fixed.pgn  test_match.pgn  test_match_1600.pgn  test_sample_evals.sh  vercel-build.sh  vercel.json  wac_score_based_results.json
.husky/: pre-commit
apps/uci-server/: Cargo.toml  Dockerfile
apps/uci-server/src/: connection.rs  engine.rs  main.rs
crates/engine/: Cargo.toml  M2_COMPLETION.md  M3_COMPLETION.md  PERFORMANCE.md  README.md
crates/engine-bridge-wasm/: Cargo.toml
crates/engine-bridge-wasm/src/: lib.rs
crates/engine/benches/: perft_bench.rs  search_bench.rs
crates/engine/examples/: analyze_failures.rs  analyze_wac271.rs  basic_usage.rs  collect_training_data.rs  comprehensive_test.rs  debug_eval_breakdown.rs  debug_eval_components.rs  debug_eval_simple.rs  debug_hanging_piece.rs  debug_movegen.rs  debug_ng5.rs  debug_opening.rs  debug_piece_count.rs  debug_search_trace.rs  debug_simple_capture.rs  debug_tactical.rs  debug_wac001_deep.rs  debug_wac271.rs  eval_component_test.rs  fen_parsing.rs  generate_training_data.rs  move_generation.rs  move_order_test.rs  optimize_k.rs  perft_runner.rs  tactical_test_runner.rs  test_after_d4.rs  test_black_moves.rs  test_eval_scale.rs  test_extensions.rs  test_knight_attacks.rs  test_ng5_legality.rs  test_ng5_responses.rs  test_nxf7.rs  test_qg6_check.rs  test_see_bxn.rs  test_see_free_pieces.rs  test_wac001.rs  test_wac001_ordering.rs  texel_tune.rs  (+4 more)
crates/engine/positions/: hanging_pieces.epd  opening_suite.epd  truly_hanging.epd
crates/engine/src/: attacks.rs  bitboard.rs  board.rs  eval.rs  io.rs  lib.rs  move.rs  move_order.rs  movegen.rs  movelist.rs  opening_book.rs  perft.rs  piece.rs  polyglot.rs  search.rs  search_params.rs  square.rs  time.rs  tt.rs  tune.rs  types.rs  uci.rs  zobrist.rs
crates/engine/src/eval/: king.rs  material.rs  pawns.rs  phase.rs  pieces.rs  positional.rs  pst.rs  threats.rs
crates/engine/src/search/: core.rs  extensions.rs  history.rs  lmr.rs  mod.rs  pruning.rs  see.rs
crates/engine/tests/: debug_mate.rs  edge_cases.rs  engine_smoke.rs  mate_detection_test.rs  performance_bench.rs  protocol_roundtrip.rs  tactical_suite.rs
docs/: IMPLEMENTATION-ROADMAP.md  M0.md  M1.md  M10-PLAN.md  M2-IMPLEMENTATION-PLAN.md  M2-M7-PLAN.md  M2-TASKS.md  M2.txt  M3-PLAN.md  M3.txt  M4-PLAN.md  M4-PLUS-PLAN.md  M4.txt  M4_COMPLETION.md  M5-PLAN.md  M5.txt  M6-PLAN.md  M6.txt  M7-PLAN.md  M7-RESULTS.md  M7.txt  M8-BROWSER-COMPATIBILITY.md  M8-PERFORMANCE.md  M8-PLAN.md  M8-SUMMARY.md  M8-TESTING-GUIDE.md  M9-COMPLETE.md  M9-REMAINING-WORK.md  PLAY-VS-ENGINE-PLAN.md  PRODUCTION-PLAN.md  README.md
elo_calibration_results/: d11_sf1320.pgn  d11_sf1400.pgn  d1_sf1320.pgn  d1_sf1400.pgn  d1_sf1500.pgn  d1_sf1600.pgn  d1_sf1700.pgn  d1_sf1800.pgn  d1_sf1900.pgn  d3_sf1500.pgn  d3_sf1600.pgn  d3_sf1700.pgn  d3_sf1800.pgn  d3_sf1900.pgn  d3_sf2000.pgn  d5_sf1320.pgn  d5_sf1400.pgn  d5_sf1500.pgn  d5_sf1600.pgn  d5_sf1700.pgn  d5_sf1800.pgn  (+19 more)
services/engine-server/: Cargo.toml
services/engine-server/src/: main.rs
(+74 files in other folders)
