
[workspace]
members = [
  "crates/engine",
  "crates/engine-bridge-wasm",
  "services/engine-server"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
