
[workspace]
members = [
  "crates/engine",
  "crates/engine-bridge-wasm",
  "apps/uci-server"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# WASM-optimized release profile (M8: WASM Integration)
[profile.release]
opt-level = 'z'       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization (slower compile, smaller binary)
panic = 'abort'       # Smaller binary (no unwinding)
strip = true          # Remove debug symbols

# Slightly optimized dev profile for faster WASM development
[profile.dev]
opt-level = 1         # Some optimization for reasonable performance
