
[package]
name = "engine-bridge-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
engine = { path = "../engine" }

[features]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-Oz",
  "--enable-mutable-globals",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-sign-ext"
]
