
[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "perft_bench"
harness = false
