
[package]
name = "engine-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { version = "1.7", features = ["v4"] }
parking_lot = "0.12"

[dependencies.engine]
path = "../../crates/engine"
